name:                servant-contrib
version:             0.1
synopsis:            A collection of user contributions for servant, a Type-Level Web DSL.
-- description:
homepage:            https://github.com/haskell-servant/servant-contrib
bug-reports:         https://github.com/haskell-servant/servant-contrib/issues
license:             BSD3
license-file:        LICENSE
author:              Nickolay Kudasov
maintainer:          nickolay.kudasov@gmail.com
copyright:           2016 Servant contributors
category:            Servant Web
build-type:          Custom
cabal-version:       >=1.10
tested-with:         GHC >= 7.8

custom-setup
  -- any should do
  setup-depends:
    Cabal     >= 1.14,
    base      >= 4.5     && <5,
    directory >= 1.1.0.1,
    filepath  >= 1.3.0.0

source-repository head
  type: git
  location: https://github.com/haskell-servant/servant-contrib.git

library
  exposed-modules:
    Servant.Contrib
    Servant.Contrib.RegexHttpApiData
  build-depends:
      base            >= 4.7  && <4.10
    , servant         == 0.9.*
    , http-api-data   >= 0.3  && <0.4
    , regex-tdfa      >= 1.2.0 && < 1.3
    , semigroups      >= 0.16.2.2 && <0.19
    , text
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

test-suite doctests
  type:           exitcode-stdio-1.0
  main-is:        doctests.hs
  hs-source-dirs: tests
  default-language: Haskell2010
  ghc-options:    -Wall -threaded

  build-depends:
    base,
    QuickCheck     >= 2.9.2,
    quickcheck-instances >= 0.3.12,
    template-haskell,
    directory      >= 1.0,
    doctest        == 0.11.*,
    filepath       >= 1.2

