name:                servant-server-contrib
version:             0.1
synopsis:            A collection of user contributions for servant-server.
-- description:
homepage:            https://github.com/haskell-servant/servant-contrib
bug-reports:         https://github.com/haskell-servant/servant-contrib/issues
license:             BSD3
license-file:        LICENSE
author:              Nickolay Kudasov
maintainer:          nickolay.kudasov@gmail.com
copyright:           2016 Servant contributors
category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC >= 7.8

source-repository head
  type: git
  location: https://github.com/haskell-servant/servant-contrib.git

library
  exposed-modules:
    Servant.Contrib
  build-depends:
      base >=4.7 && <5
    , servant ==0.11.*
    , servant-server ==0.11.*
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
