name:                servant-server-contrib
version:             0.1
synopsis:            A collection of user contributions for servant-server.
-- description:
homepage:            https://github.com/haskell-servant/servant-contrib
bug-reports:         https://github.com/haskell-servant/servant-contrib/issues
license:             BSD3
license-file:        LICENSE
author:              Nickolay Kudasov
maintainer:          nickolay.kudasov@gmail.com
copyright:           2016 Servant contributors
category:            Web
build-type:          Custom
cabal-version:       >=1.10
tested-with:         GHC >= 7.8

custom-setup
  setup-depends:
    base, Cabal, cabal-doctest >=1.0.2 && <1.1

source-repository head
  type: git
  location: https://github.com/haskell-servant/servant-contrib.git

library
  exposed-modules:
    Servant.Server.Contrib
    Servant.Server.Contrib.ManyQueryParams
  build-depends:
      base >=4.7 && <5
    , servant ==0.11.*
    , servant-server ==0.11.*
    , servant-contrib ==0.1.*
    , http-types >=0.9.1 && <0.10
    , generics-sop ==0.3.*
    , text
    , bytestring
    , wai >=3.2.1 && <3.3
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

test-suite doctests
  type:                exitcode-stdio-1.0
  main-is:             doctests.hs
  build-depends:
    base,
    doctest >= 0.11.1 && <0.12
  ghc-options:         -Wall -threaded
  hs-source-dirs:      tests
  default-language:    Haskell2010
